2010-01-26  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Returning false in
	IsKeyboardFocusableCore when parent is null.

	r: alan

2010-01-25  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: Removed properties: RealItem and
	RealItemsControlAutomationPeer. Fixed properties: Item and
	ItemsControlAutomationPeer to match MS implementation.
	* ItemsControlAutomationPeer.cs: Private method added: GetItem, used
	to get the children using internal method or indexer.
	* SelectorItemAutomationPeer.cs: Property removed:
	RealItemsControlAutomationPeer, not needed.

	r: alan

2010-01-08  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Fixes Bug #568627: IsOffscreen
	event not raised when Visibility changes 

	r: spouliot

2009-12-21  Alan McGovern  <amcgovern@novell.com>

	* ItemsControlAutomationPeer.cs: I should've fixed this as
	  part of my last commit - Don't cast the return value of
	  GetContainerItem to ListBoxItem as it's now only guaranteed
	  to be a UIElement.

2009-12-21  Alan McGovern  <amcgovern@novell.com>

	* ItemsControlAutomationPeer.cs: GetContainerItem should
	  return UIElement instead of ListBoxItem so that the method
	  can be used with ItemsControl.

2009-12-17  Mario Carrion  <mcarrion@novell.com>

	* ScrollBarAutomationPeer.cs: Fixes NRE when MoonAtkBridge is
	available.
	* ItemAutomationPeer.cs,
	  ButtonBaseAutomationPeer.cs: Delegate moved from constructor to new
	method OnContentChanged.
	* FrameworkElementAutomationPeer.cs: New internal method
	OnContentChanged used raise AutomationEvents.StructureChanged when
	ContentControl.Control sets to Panel subclasses.

	r: toshok

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* AutomationSingleton.cs: Remove INTERNAL_HACK ifdef as it is no longer
	used.

	r: spouliot

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* ProgressBarAutomationPeer.cs: ProgressBars are always read-only.
