@@ -28,6 +28,7 @@
 
 using System;
 using System.Windows;
+using System.Collections.Generic;
 using System.Windows.Automation.Peers;
 using System.Windows.Automation.Provider;
 using System.Windows.Controls;
@@ -208,6 +209,29 @@ namespace MoonTest.System.Windows.Automation.Peers {
 			Assert.IsTrue (double.IsNaN (peer.GetClickablePoint ().Y), "GetClickablePoint Y");
 			Assert.IsTrue (double.IsNaN (peer.GetClickablePointCore_ ().X), "GetClickablePointCore X");
 			Assert.IsTrue (double.IsNaN (peer.GetClickablePointCore_ ().Y), "GetClickablePointCore Y");
+		}
+
+		[TestMethod]
+		[Asynchronous]
+		public override void GetChildren ()
+		{
+			bool sliderLoaded = false;
+			Slider slider = new Slider ();
+			slider.Loaded += (o, e) => sliderLoaded = true;
+			TestPanel.Children.Add (slider);
+
+			SliderAutomationPeerPoker sapp = new SliderAutomationPeerPoker (slider);
+
+			EnqueueConditional (() => sliderLoaded, "SliderLoaded #0");
+			Enqueue (() => {
+				AutomationPeer peer = FrameworkElementAutomationPeer.CreatePeerForElement (slider);
+				Assert.IsNotNull (peer, "FrameworkElementAutomationPeer.CreatePeerForElement");
+
+				List<AutomationPeer> children = sapp.GetChildren ();
+				Assert.IsNotNull (children, "GetChildren #0");
+				Assert.AreEqual (3, children.Count, "GetChildren #1");
+			});
+			EnqueueTestComplete ();
 		}
 
 		[TestMethod]
