@@ -1,3 +1,10 @@
+2010-02-05  Brad Taylor  <brad@getcoded.net>
+
+	* System.Windows.Automation.Peers/SliderAutomationPeerTest.cs: Verify
+	that only 3 peers are returned from GetChildren.
+
+	r: toshok
+
 2010-02-05  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Windows.Browser/HtmlPopupWindowOptionsTest.cs: New. Test 
